--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -11,6 +11,11 @@ type: "php:7.4"
 build:
     flavor: composer
 
+dependencies:
+    php:
+        composer/composer: '^2'
+        wp-cli/wp-cli: "^2.2.0"
+
 # The relationships of the application with services or other applications.
 # The left-hand side is the name of the relationship as it will be exposed
 # to the application in the PLATFORM_RELATIONSHIPS variable. The right-hand
@@ -51,10 +56,6 @@ web:
 
 # The size of the persistent disk of the application (in MB).
 disk: 2048
-
-dependencies:
-    php:
-        wp-cli/wp-cli: "^2.2.0"
 
 # The mounts that will be performed when the package is deployed.
 mounts:
