--- a/composer.json
+++ b/composer.json
@@ -32,13 +32,16 @@
   ],
   "require": {
     "php": ">=7.1",
-    "composer/installers": "^1.8",
-    "vlucas/phpdotenv": "^5.2",
+    "composer/installers": "^1.10",
+    "vlucas/phpdotenv": "^5.3",
     "oscarotero/env": "^2.1",
     "roots/bedrock-autoloader": "^1.0",
-    "roots/wordpress": "5.6",
+    "roots/wordpress": "5.7",
     "roots/wp-config": "1.0.0",
-    "roots/wp-password-bcrypt": "1.0.0"
+    "roots/wp-password-bcrypt": "1.0.0",
+    "platformsh/config-reader": "^2.4",
+    "wp-cli/wp-cli-bundle": "^2.4",
+    "psy/psysh": "^0.10.7"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.5.8",
