Disabled cron in environment file and added a cron job to the platform app yaml file.

--- a/.environment
+++ b/.environment
@@ -21,3 +21,4 @@ export AUTH_SALT=$PLATFORM_PROJECT_ENTROPY
 export SECURE_AUTH_SALT=$PLATFORM_PROJECT_ENTROPY
 export LOGGED_IN_SALT=$PLATFORM_PROJECT_ENTROPY
 export NONCE_SALT=$PLATFORM_PROJECT_ENTROPY
+export DISABLE_WP_CRON=TRUE
