--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,12 @@
     }
   ],
   "keywords": [
-    "bedrock", "composer", "roots", "wordpress", "wp", "wp-config"
+    "bedrock",
+    "composer",
+    "roots",
+    "wordpress",
+    "wp",
+    "wp-config"
   ],
   "support": {
     "issues": "https://github.com/roots/bedrock/issues",
@@ -26,26 +31,26 @@
   "repositories": [
     {
       "type": "composer",
-      "url": "https://wpackagist.org",
-      "only": ["wpackagist-plugin/*", "wpackagist-theme/*"]
+      "url": "https://wpackagist.org"
     }
   ],
   "require": {
-    "php": ">=7.1",
-    "composer/installers": "^1.10",
+    "php": ">=7.4",
+    "composer/installers": "^1.12",
     "vlucas/phpdotenv": "^5.3",
     "oscarotero/env": "^2.1",
     "roots/bedrock-autoloader": "^1.0",
-    "roots/wordpress": "5.7",
+    "roots/bedrock-disallow-indexing": "^2.0",
+    "roots/wordpress": "^5.8.2",
     "roots/wp-config": "1.0.0",
-    "roots/wp-password-bcrypt": "1.0.0",
+    "roots/wp-password-bcrypt": "1.1.0",
     "platformsh/config-reader": "^2.4",
-    "wp-cli/wp-cli-bundle": "^2.4",
-    "psy/psysh": "^0.10.7"
+    "wp-cli/wp-cli-bundle": "^2.5",
+    "psy/psysh": "^0.11.0"
   },
   "require-dev": {
-    "squizlabs/php_codesniffer": "^3.5.8",
-    "roave/security-advisories": "dev-master"
+    "squizlabs/php_codesniffer": "^3.6.0",
+    "roave/security-advisories": "dev-latest"
   },
   "config": {
     "optimize-autoloader": true,
@@ -55,9 +60,15 @@
   "prefer-stable": true,
   "extra": {
     "installer-paths": {
-      "web/app/mu-plugins/{$name}/": ["type:wordpress-muplugin"],
-      "web/app/plugins/{$name}/": ["type:wordpress-plugin"],
-      "web/app/themes/{$name}/": ["type:wordpress-theme"]
+      "web/app/mu-plugins/{$name}/": [
+        "type:wordpress-muplugin"
+      ],
+      "web/app/plugins/{$name}/": [
+        "type:wordpress-plugin"
+      ],
+      "web/app/themes/{$name}/": [
+        "type:wordpress-theme"
+      ]
     },
     "wordpress-install-dir": "web/wp"
   },
