--- a/.environment
+++ b/.environment
@@ -7,7 +7,7 @@ export DB_PASSWORD=$(echo $PLATFORM_RELATIONSHIPS | base64 --decode | jq -r ".da
 export WP_HOME=$(echo $PLATFORM_ROUTES | base64 --decode | jq -r 'to_entries[] | select(.value.primary == true) | .key')
 export WP_SITEURL="${WP_HOME}wp"
 export WP_DEBUG_LOG=/var/log/app.log
-if [ "$PLATFORM_BRANCH" != "master" ] ; then
+if [ "$PLATFORM_BRANCH" != "master" ] && [ "$PLATFORM_BRANCH" != "main" ] ; then
     export WP_ENV='development'
 else
     export WP_ENV='production'
