--- a/composer.json
+++ b/composer.json
@@ -36,25 +36,29 @@
   ],
   "require": {
     "php": ">=7.4",
-    "composer/installers": "^1.12",
-    "vlucas/phpdotenv": "^5.3",
+    "composer/installers": "^2.0",
+    "vlucas/phpdotenv": "^5.4",
     "oscarotero/env": "^2.1",
     "roots/bedrock-autoloader": "^1.0",
     "roots/bedrock-disallow-indexing": "^2.0",
-    "roots/wordpress": "^5.8.2",
+    "roots/wordpress": "^5.9",
     "roots/wp-config": "1.0.0",
     "roots/wp-password-bcrypt": "1.1.0",
     "platformsh/config-reader": "^2.4",
-    "wp-cli/wp-cli-bundle": "^2.5",
-    "psy/psysh": "^0.11.0"
+    "wp-cli/wp-cli-bundle": "^2.6",
+    "psy/psysh": "^0.11.1"
   },
   "require-dev": {
-    "squizlabs/php_codesniffer": "^3.6.0",
+    "squizlabs/php_codesniffer": "^3.6.2",
     "roave/security-advisories": "dev-latest"
   },
   "config": {
     "optimize-autoloader": true,
-    "preferred-install": "dist"
+    "preferred-install": "dist",
+    "allow-plugins": {
+      "composer/installers": true,
+      "roots/wordpress-core-installer": true
+    }
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
