--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -5,7 +5,7 @@
 name: app
 
 # The runtime the application uses.
-type: "php:7.4"
+type: "php:8.1"
 
 # Configuration of the build of the application.
 build:
@@ -65,3 +65,10 @@ mounts:
     "web/app/uploads":
         source: local
         source_path: "uploads"
+
+source:
+  operations:
+    auto-update:
+      command: |
+        curl -fsS https://raw.githubusercontent.com/platformsh/source-operations/main/setup.sh | { bash /dev/fd/3 sop-autoupdate; } 3<&0
+    
