--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,7 @@
     "wpackagist-theme/twentytwentytwo": "^1.2",
     "platformsh/config-reader": "^2.4",
     "wp-cli/wp-cli-bundle": "^2.6",
-    "psy/psysh": "^0.11.4"
+    "psy/psysh": "^0.11.5"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.6.2",
@@ -58,7 +58,8 @@
     "preferred-install": "dist",
     "allow-plugins": {
       "composer/installers": true,
-      "roots/wordpress-core-installer": true
+      "roots/wordpress-core-installer": true,
+      "johnpbloch/wordpress-core-installer": true
     }
   },
   "minimum-stability": "dev",
