--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -52,7 +52,12 @@ web:
         "/wp/wp-content/uploads":
             root: "web/app/uploads"
             scripts: false
-            allow: true
+            allow: false
+            rules:
+                # Allow access to common static files.
+                '(?<!\-lock)\.(?i:jpe?g|gif|png|svg|bmp|ico|css|js(?:on)?|eot|ttf|woff|woff2|pdf|docx?|xlsx?|pp[st]x?|psd|odt|key|mp[2-5g]|m4[av]|og[gv]|wav|mov|wm[av]|avi|3g[p2])$':
+                    allow: true
+                    expires: 1w
 
 # The size of the persistent disk of the application (in MB).
 disk: 2048
@@ -71,4 +76,4 @@ source:
     auto-update:
       command: |
         curl -fsS https://raw.githubusercontent.com/platformsh/source-operations/main/setup.sh | { bash /dev/fd/3 sop-autoupdate; } 3<&0
-    
+
