--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -1,29 +1,36 @@
-# This file describes an application. You can have multiple applications
-# in the same project.
+# Complete list of all available properties: https://docs.platform.sh/create-apps/app-reference.html
 
-# The name of this app. Must be unique within a project.
+# A unique name for the app. Must be lowercase alphanumeric characters. Changing the name destroys data associated
+# with the app.
 name: app
 
 # The runtime the application uses.
+# Complete list of available runtimes: https://docs.platform.sh/create-apps/app-reference.html#types
 type: "php:8.1"
-
-# Configuration of the build of the application.
-build:
-    flavor: composer
-
-dependencies:
-    php:
-        composer/composer: '^2'
-        wp-cli/wp-cli-bundle: "^2.4.0"
 
 # The relationships of the application with services or other applications.
 # The left-hand side is the name of the relationship as it will be exposed
 # to the application in the PLATFORM_RELATIONSHIPS variable. The right-hand
 # side is in the form `<service name>:<endpoint name>`.
+# More information: https://docs.platform.sh/create-apps/app-reference.html#relationships
 relationships:
     database: "db:mysql"
 
-# The configuration of app when it is exposed to the web.
+# The size of the persistent disk of the application (in MB). Minimum value is 128.
+disk: 2048
+
+# Mounts define directories that are writable after the build is complete. If set as a local source, disk property is required.
+# More information: https://docs.platform.sh/create-apps/app-reference.html#mounts
+mounts:
+    "web/app/wp-content/cache":
+        source: local
+        source_path: "cache"
+    "web/app/uploads":
+        source: local
+        source_path: "uploads"
+
+# The web key configures the web server running in front of your app.
+# More information: https://docs.platform.sh/create-apps/app-reference.html#web
 web:
     locations:
         "/":
@@ -59,18 +66,47 @@ web:
                     allow: true
                     expires: 1w
 
-# The size of the persistent disk of the application (in MB).
-disk: 2048
+# Specifies a default set of build tasks to run. Flavors are language-specific.
+# More information: https://docs.platform.sh/create-apps/app-reference.html#build
+build:
+    flavor: composer
 
-# The mounts that will be performed when the package is deployed.
-mounts:
-    "web/app/wp-content/cache":
-        source: local
-        source_path: "cache"
-    "web/app/uploads":
-        source: local
-        source_path: "uploads"
+# Installs global dependencies as part of the build process. They’re independent of your app’s dependencies and
+# are available in the PATH during the build process and in the runtime environment. They’re installed before
+# the build hook runs using a package manager for the language.
+# More information: https://docs.platform.sh/create-apps/app-reference.html#dependencies
+dependencies:
+    php:
+        composer/composer: '^2'
+        wp-cli/wp-cli-bundle: "^2.4.0"
 
+# Hooks allow you to customize your code/environment as the project moves through the build and deploy stages
+# More info:
+hooks:
+    # The build hook is run after any build flavor.
+    # More information: https://docs.platform.sh/create-apps/hooks/hooks-comparison.html#build-hook
+    build: |
+        set -e
+
+    # The deploy hook is run after the app container has been started, but before it has started accepting requests.
+    # More information: https://docs.platform.sh/create-apps/hooks/hooks-comparison.html#deploy-hook
+    deploy: |
+        # Flushes the object cache which might have changed between current production and newly deployed changes
+        wp cache flush
+        # Runs the WordPress database update procedure in case core is being updated with the newly deployed changes
+        wp core update-db
+        # Runs all cron events that are due now and may have come due during the build+deploy procedure
+        wp cron event run --due-now
+
+########################################################################################################################
+##                                                                                                                    ##
+## This source operation is part of the Platform.sh process of updating and maintaining our collection of templates.  ##
+## For more information see https://docs.platform.sh/create-apps/source-operations.html and                           ##
+## https://github.com/platformsh/source-operations                                                                    ##
+##                                                                                                                    ##
+##                  YOU CAN SAFELY DELETE THIS COMMENT AND THE LINES BENEATH IT                                       ##
+##                                                                                                                    ##
+########################################################################################################################
 source:
   operations:
     auto-update:
